manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sjh-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sjh-api
  template:
    metadata:
      labels:
        app: sjh-api
    spec:
      containers:
      - name: sjh-api
        image: ceappacr.azurecr.io/sjh-api:latest  # ACR에서 이미지 사용
        ports:
        - containerPort: 8080
