manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sjh-api
  namespace: "82262800"  # 숫자를 문자열로 처리
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sjh-api
